--- a/04-Working-with-Unix.Rmd
+++ b/04-Working-with-Unix.Rmd
@@ -1302,7 +1302,7 @@ Let's start by creating a very basic `makefile` with `nano`:
 
 ```{r, engine='bash', eval=FALSE}
 cd ~/Documents/Journal
-nano `makefile`
+nano makefile
 ```
 
 ```
@@ -1426,9 +1426,127 @@ cat readme.txt
 ## 1
 ```
 
-Looks like it worked! Now let's modify `toc.txt` (which is a dependency of
-`readme.txt`) then we'll try running `make` again.
+Looks like it worked! What do you think will happen if we run `make readme.txt`
+again?
+
+```{r, engine='bash', eval=FALSE}
+make readme.txt
+```
+
+```
+## make: 'readme.txt' is up to date.
+```
+
+You guessed it: nothing happened! Since the `readme.txt` file still exists and
+no changes were made to any of the dependencies for `readme.txt` (`toc.txt` is
+the only dependency) `make` doesn't run the commands for the `readme.txt` rule.
+Now let's modify `toc.txt` then we'll try running `make` again.
+
+```{r, engine='bash', eval=FALSE}
+echo "2. 2017-06-16-IQSS-Talk" >> toc.txt
+make readme.txt
+```
+
+```
+## echo "This journal contains the following number of entries:" > readme.txt
+## wc -l toc.txt | egrep -o "[0-9]+" >> readme.txt
+```
+
+Looks like it ran! Let's check readme.txt to make sure.
+
+```{r, engine='bash', eval=FALSE}
+cat readme.txt
+```
+
+```
+## This journal contains the following number of entries:
+## 2
+```
+
+It looks like `make` successfully updated `readme.txt`! With every change to
+`toc.txt`, running `make readme.txt` will *programmatically* update `readme.txt`.
+
+In order to simplify the `make` experience, we can create a rule at the top of
+our `makefile` called `all` where we can list all of the files that are built
+by the `makefile`. By adding the `all` target we can simply run `make` without
+any arguments in order to build all of the targets in the `makefile`. Let's 
+open up `nano` and add this rule:
+
+```{r, engine='bash', eval=FALSE}
+nano makefile
+```
+
+```
+all: draft_journal_entry.txt readme.txt
+
+draft_journal_entry.txt:
+  touch draft_journal_entry.txt
+  
+readme.txt: toc.txt
+  echo "This journal contains the following number of entries:" > readme.txt
+  wc -l toc.txt | egrep -o "[0-9]+" >> readme.txt
+```
+
+While we have `nano` open let's add another special rule at the end of our
+`makefile` called `clean` which destroys the files created by our `makefile`:
+
+```
+all: draft_journal_entry.txt readme.txt
+
+draft_journal_entry.txt:
+  touch draft_journal_entry.txt
+  
+readme.txt: toc.txt
+  echo "This journal contains the following number of entries:" > readme.txt
+  wc -l toc.txt | egrep -o "[0-9]+" >> readme.txt
+  
+clean:
+  rm draft_journal_entry.txt
+  rm readme.txt
+```
+
+Let's save and close our `makefile` then let's test it out first let's clean up
+our repository:
+
+```{r, engine='bash', eval=FALSE}
+make clean
+ls
+```
+
+```
+## rm draft_journal_entry.txt
+## rm readme.txt
+## makefile
+## toc.txt
+```
+
+```{r, engine='bash', eval=FALSE}
+make
+ls
+```
+
+```
+## touch draft_journal_entry.txt
+## echo "This journal contains the following number of entries:" > readme.txt
+## wc -l toc.txt | egrep -o "[0-9]+" >> readme.txt
+## draft_journal_entry.txt
+## readme.txt
+## makefile
+## toc.txt
+```
+
+Looks like our `makefile` works! The `make` command is extremely powerful, and
+this section is meant to just be an introduction. For more in-depth reading
+about `make` I recommend [Karl Broman](https://twitter.com/kwbroman)'s
+[tutorial](http://kbroman.org/minimal_make/) or 
+[Chase Lambert](http://chaselambda.com)'s
+[makefiletutorial.com](http://makefiletutorial.com).
 
 ### Summary
 
-### Exercises
+- `make` is a tool for creating relationships between files and programs, so
+that files that depend on other files can be automatically rebuilt.
+- `makefiles` are text files that contain a list of rules.
+- Rules are made up of targets (files to be built), commands (a list of bash
+commands that build the target), and dependencies (files that the target depends
+on to be built).
