added functions exercises

--- a/05-Bash-Programming.Rmd
+++ b/05-Bash-Programming.Rmd
@@ -1718,7 +1718,89 @@ echo $my_sum
 
 ### Summary
 
+- Functions start with the `function` keyword followed by the name of the
+function and curly brackets (`{}`).
+- Functions are small, reusable pieces of code that behave just like commands.
+- You can use variables like `$1`, `$2`, and `$@` in order to provide arguments
+to functions, just like a Bash script.
+- Use the `source` command in order to read in a Bash script with function
+definitions so that you can use your functions in your shell.
+- Use the `local` keyword to prevent your function from creating or modifying
+global variables.
+- Be sure to `echo` thr results of your function (if there are any) so that 
+they can be captured with command substitution.
+
 ### Exercises
+
+Below this list of exercises you can find examples of how these programs should
+work when used on the command line.
+
+1. Write a function called `plier` which multiplies together a sequence of
+numbers.
+2. Write a function called `isiteven` that prints `1` if a number is even or
+`0` a number is not even.
+3. Write a function called `nevens` which prints the number of even numbers when
+provided with a sequence of numbers. Use `isiteven` when writing this function.
+4. Write a function called `howodd` which prints the percentage of odd numbers
+in a sequence of numbers. Use `nevens` when writing this function.
+5. Write a function called `fib` which prints the number of
+[fibonacci](https://en.wikipedia.org/wiki/Fibonacci_number) numbers specified.
+
+```{r, engine='bash', eval=FALSE}
+plier 7 2 3
+```
+
+```
+## 42
+```
+
+```{r, engine='bash', eval=FALSE}
+isiteven 42
+```
+
+```
+## 1
+```
+
+```{r, engine='bash', eval=FALSE}
+nevens 42 6 7 9 33
+```
+
+```
+## 2
+```
+
+```{r, engine='bash', eval=FALSE}
+howodd 42 6 7 9 33
+```
+
+```
+## .40
+```
+
+```{r, engine='bash', eval=FALSE}
+howodd 42 6 7 9 33
+```
+
+```
+## .40
+```
+
+```{r, engine='bash', eval=FALSE}
+fib 4
+```
+
+```
+## 0 1 1 2
+```
+
+```{r, engine='bash', eval=FALSE}
+fib 10
+```
+
+```
+## 0 1 1 2 3 5 8 13 21 34
+```
 
 ## Writing Programs
 
@@ -1751,6 +1833,8 @@ When you're considering what inputs your program is going to have and what your
 program is going to print to the console you should consider whether or not your
 program might be used in a pipeline, and you should organize your program
 accordingly.
+
+- A WORD ON NO MESSAGE WHEN SIDE EFFECT SUCCEEDS
 
 ### `chmod`
 
